--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.8",
+    "postcss": "^8.0.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "6.2.2"
+    "react-router-dom": "6.2.2",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
